forecasting_api/test_output.txt
python :   File "<string>", line 
12
At line:1 char:1
+ python -c "
+ ~~~~~~~~~~~
    + CategoryInfo          : Not 
   Specified: (  File "<string>"  
  , line 12:String) [], RemoteE   
 xception
    + FullyQualifiedErrorId : Nat 
   iveCommandError
 
    print(f'Avg
          ^
SyntaxError: unterminated string 
literal (detected at line 12)
